# cpp-matplotlib

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Doxyfile  LICENSE  README.md  ReqRepConnection.hpp  cpp-matplotlib-config.cmake  cpp_plot.cc  cpp_plot.hpp  ipython_run.py  main.cc  pyplot_listener.py
data/: session1.raw
src/: ReqRepConnection.cc  RequestSink.cc  RequestSink.hpp  cpp_mpl.cc  cpp_mpl.hpp  cpp_plot.cc  cpp_plot.hpp  ipython_protocol.cc  ipython_protocol.hpp  ipython_run.py  main.cc  pyplot_listener.py  test.py
